--- a/i3/config
+++ b/i3/config
@@ -176,7 +176,7 @@ exec_always --no-startup-id picom -f
 
 set $first_run 1
 
-exec polybar
+exec --no-startup-id polybar
 
 exec_always --no-startup-id feh --randomize --bg-scale ~/wallpaper/*
 
