--- a/i3/config
+++ b/i3/config
@@ -178,6 +178,8 @@ set $first_run 1
 
 exec --no-startup-id polybar
 
+exec --no-startup-id xrandr -s 1440x900
+
 exec_always --no-startup-id feh --randomize --bg-scale ~/wallpaper/*
 
 exec_always --no-startup-id xmodmap -e "clear lock" #disable caps lock switch
