--- a/i3/config
+++ b/i3/config
@@ -54,7 +54,7 @@ floating_modifier $mod
 # start a terminal
 bindsym $mod+Return exec alacritty
 
-bindsym $mod+Shift+Return exec brave
+bindsym $mod+Shift+Return exec firefox
 
 # kill focused window
 bindsym $mod+Shift+q kill
