--- a/i3/config
+++ b/i3/config
@@ -178,7 +178,7 @@ set $first_run 1
 
 exec --no-startup-id polybar
 
-exec --no-startup-id xrandr -s 1440x810
+# exec --no-startup-id xrandr -s 1440x810
 
 exec_always --no-startup-id feh --randomize --bg-scale ~/wallpaper/*
 
