--- a/i3/config
+++ b/i3/config
@@ -27,7 +27,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:BlexMono Nerd Font Regular 12
+# font pango:BlexMono Nerd Font Regular 12
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -178,7 +178,7 @@ set $first_run 1
 
 exec --no-startup-id polybar
 
-# exec --no-startup-id xrandr -s 1440x810
+exec --no-startup-id xrandr -s 1440x810
 
 exec_always --no-startup-id feh --randomize --bg-scale ~/wallpaper/*
 
