--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -70,16 +70,16 @@ font:
   # The normal (roman) font face to use.
   # Style can be specified to pick a specific face.
   normal:
-    family: "JetBrainsMono"
+    family: "JetBrainsMono Nerd Font"
 
   # The bold font face
   bold:
-    family: "JetBrainsMono"
+    family: "JetBrainsMono Nerd Font"
     style: "Medium"
 
   # The italic font face
   italic:
-    family: "JetBrainsMono"
+    family: "JetBrainsMono Nerd Font"
     style: "Italic"
 
   # Point size of the font
