--- a/dotfiles/i3/config
+++ b/dotfiles/i3/config
@@ -52,7 +52,7 @@ exec --no-startup-id nm-applet
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec --no-startup-id alacritty
+bindsym $mod+Return exec --no-startup-id kitty
 
 bindsym $mod+Shift+Return exec --no-startup-id firefox
 
