--- a/home-manager/configs/i3/config
+++ b/home-manager/configs/i3/config
@@ -11,7 +11,7 @@
 
 exec --no-startup-id xrandr -s 1440x900
 # exec_always --no-startup-id xrandr --output DP-1 --auto --right-of HDMI-0
-exec --no-startup-id sh ~/.config/polybar/polybar.sh
+exec --no-startup-id polybar example &
 exec_always --no-startup-id feh --randomize --bg-scale ~/wallpaper/*
 
 set $ws1 "1"
