--- a/home-manager/configs/i3/config
+++ b/home-manager/configs/i3/config
@@ -11,7 +11,6 @@
 
 exec --no-startup-id xrandr -s 1440x900
 # exec_always --no-startup-id xrandr --output DP-1 --auto --right-of HDMI-0
-exec --no-startup-id polybar &
 exec_always --no-startup-id feh --randomize --bg-scale ~/wallpaper/*
 
 set $ws1 "1"
@@ -32,7 +31,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-# font pango:BlexMono Nerd Font Regular 12
+font pango:JetBrainsMono Nerd Font Regular 12
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -323,4 +322,8 @@ mode "$mode_gaps_left" {
 
         bindsym Return mode "$mode_gaps"
         bindsym Escape mode "default"
+}
+
+bar {
+        status_command i3status
 }
